Closed Bug 1681292 Opened 5 years ago Closed 4 years ago

The Submenus from a Tab's Context menu are not indicated by VoiceOver

Categories

(Core :: Disability Access APIs, defect, P1)

Desktop
macOS
defect

Tracking

()

VERIFIED FIXED
86 Branch
Tracking Status
firefox83 --- wontfix
firefox84 --- wontfix
firefox85 --- wontfix
firefox86 --- verified

People

(Reporter: rdoghi, Assigned: morgan)

References

Details

(Whiteboard: [Mac2020_2])

Attachments

(2 files)

Attached video Submenu.mp4

[Affected versions]
85.0a1 (2020-12-08)

[Affected platforms]
MacOsX

[Preconditions]
Have VoiceOver enabled on MacOS (Command + F5)

[Steps to reproduce]

  1. Open the Firefox browser and reach a tab's Context Menu (CTRL+Option+Shift+M)
  2. Reach the Close multiple Tabs submenu.
  3. Reach any of the Options (Close Other tabs / Close Tabs to the Right)

[Expected result]
The User should be able to reach the Close Multiple tabs submenu.

[Actual result]
The Submenus from the tab's Context menu are not indicated by VoiceOver.

I think the severity for this issue should be an S3.

Whiteboard: [Mac2020_2]

To be clear: The menu item's label is spoken, but the fact that it is a sub menu, and you can press RightArrow or Enter to open it, is not. This is indicated perfectly fine on Windows, so is a VoiceOver-specific bug.

Severity: -- → S3
Priority: -- → P2

This should be fixed before final customer release if possible. This will also still be a bug with the Proton redesign, as not all menus will switch to native menus with that redesign.

Priority: P2 → P1
Assignee: nobody → mreschenberg

Huh I just tried this, and for me VoiceOver says "submenu, 2 items" when I reach the "Close all tabs" sub menu. It also correctly indicates submenu-ness for the other ones in this context menu, along with their length.
:marcoz, could you test this in today's nightly to see if this is still an issue?

Flags: needinfo?(mzehe)

Yes, this is still an issue for me when pressing VO+Shift+M on a tab and down arrowing through the top level menu items. None of them are announced as sub menu, like Close Other Tabs, or the Send To Device sub menu. On the normal menu bar, like the History menu, items such as the Recently Closed Tabs, are announced as sub menus.

Flags: needinfo?(mzehe)
Attachment #9193621 - Attachment description: Bug 1681292: Ensure menu items correctly expose AXVisibleChildren and AXChildren r?eeejay" → Bug 1681292: Ensure menu items correctly expose AXVisibleChildren and AXChildren r?eeejay
Pushed by mreschenberg@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e482e3589b3c Ensure menu items correctly expose AXVisibleChildren and AXChildren r=eeejay
Regressions: 1685623
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch

Hi, a few things here, as I was trying to Verify this fix I came across an issue where the submenus would open automatically, without me selecting the option and it was really hard for me to navigate through to the second option, for instance going down to the Close tab option I would remain stuck at the Open in container sub menu, every time I would try to move down to the next option it would just go inside the sub menu.

Should I log a different issue for it ? Once I do get inside the sub menu all the items can be clicked correctly and they are also read out loud without issue which does make this issue Verified as fixed.

Should we open a new bug for the other issues or will they be resolved with this one ?

Other issues being :

  1. That navigation is broken when inside a menu with multiple submenus as they are automatically opened and navigated to.
  2. After selecting one of the sub menu items with VO+Space > Voice over will remain inside that sub menu even if the focues is changed to a new tab and the user cannot exit that focused item.
Flags: needinfo?(mreschenberg)

(In reply to Rares Doghi from comment #9)

Hi, a few things here, as I was trying to Verify this fix I came across an issue where the submenus would open automatically, without me selecting the option and it was really hard for me to navigate through to the second option, for instance going down to the Close tab option I would remain stuck at the Open in container sub menu, every time I would try to move down to the next option it would just go inside the sub menu.

This isn't new to this bug; context submenus auto open when you focus on their parent menu item. As far as exiting a submenu, I've been using VO+Shift+up to leave the sub menu group and go back to the regular menu. I can navigate from there just fine.

Should I log a different issue for it ? Once I do get inside the sub menu all the items can be clicked correctly and they are also read out loud without issue which does make this issue Verified as fixed.

I don't know if the above is an actual issue, I think its expected.

Should we open a new bug for the other issues or will they be resolved with this one ?

Other issues being :

  1. That navigation is broken when inside a menu with multiple submenus as they are automatically opened and navigated to.

Yeah you can file something for this

  1. After selecting one of the sub menu items with VO+Space > Voice over will remain inside that sub menu even if the focues is changed to a new tab and the user cannot exit that focused item.

Ah yeah this is a focus loss issue, I'll file something here, I don't think its unique to submenus. I've seen this happen other places with doorhangers.

Flags: needinfo?(mreschenberg)

I've added the issue here : Bug 1685993

@Morgan Please let us know if any issue was logged for the Lost Focus issue.

This issue is verified as fixed in our latest Nightly build 86.0a1 (2021-01-10).

Do you have STR for this issue you posted above?

That navigation is broken when inside a menu with multiple submenus as they are automatically opened and navigated to.

oops comment collision nevermind !

Since the Other versions are marked with wontfix , I will update the Status flag to Verified.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: