Bug 1681292: Ensure menu items correctly expose AXVisibleChildren and AXChildren r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D99949